--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "prebuild": "npm run verify && npm t",
     "build": "rimraf dist && tsc && rollup -c rollup.config.js -i dist/index.js > dist/injection.bundle.js && node tools/copy.js",
     "build:test": "rimraf dist-test && tsc -p tsconfig-test.json",
-    "test": "npm run build:test && jasmine",
+    "test": "rimraf dist-test  && tsc -p tsconfig-test.json && jasmine",
     "format": "prettier \"**/*.{js,ts,md,css,less,sass,scss}\"",
     "lint": "tslint -p tsconfig.json",
     "verify": "tsc -p tools && npm run format -- -l && npm run lint"
