--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "@types/jasmine": "^2.5.41",
     "@types/node": "^8.5.0",
     "jasmine": "^2.5.3",
+    "karma": "^3.1.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-typescript": "^3.0.13",
     "prettier": "1.13.7",
     "reflect-metadata": "^0.1.9",
     "rimraf": "^2.5.4",
     "rollup": "^0.41.4",
+    "ts-node": "^7.0.1",
     "tslint": "5.10.0",
     "tslint-config-prettier": "1.13.0",
     "typescript": "^2.0.0"
@@ -31,6 +36,8 @@
     "build": "rimraf dist && tsc && rollup -c rollup.config.js -i dist/index.js > dist/injection.bundle.js && node tools/copy.js",
     "build:test": "rimraf dist-test && tsc -p tsconfig-test.json",
     "test": "rimraf dist-test  && tsc -p tsconfig-test.json && jasmine",
+    "build-karma": "rimraf dist-karma  && tsc -p tsconfig-karma.json",
+    "test-karma": "rimraf dist-karma  && tsc -p tsconfig-karma.json && jasmine",
     "format": "prettier \"**/*.{js,ts,md,css,less,sass,scss}\"",
     "lint": "tslint -p tsconfig.json",
     "verify": "tsc -p tools && npm run format -- -l && npm run lint"
